[fire-1025] 兼容jdk高版本的编译